Settings: Add the Ads permission to Site Details.

The Ads permission is missing from Site Details, which is supposed to show all
site permissions. Add it.

Manual test - Navigate to https://permission.site, open the Page Info bubble by
clicking the icon next to the omnibox, and click "Site settings". Verify the
"Ads" permission shows up on the list and that clicking the drop-down next to
it only shows "Allow" and "Block".

Bug: 774139
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I4e355766a49c670ae378bc0b3856f11e71a94129