chrome/browser/resources/settings/site_settings/constants.js
@@ -56,6 +56,8 @@ settings.ContentSetting = {
  * @enum {string}
  */
 settings.SiteSettingSource = {
+  ADS_BLOCKED: 'ads-blocked',
+  ADS_FILTER_BLACKLIST: 'ads-filter-blacklist',
   DEFAULT: 'default',
   // This source is for the Protected Media Identifier / Protected Content
   // content setting only, which is only available on ChromeOS.
