chrome/test/data/webui/settings/test_site_settings_prefs_browser_proxy.js
@@ -125,11 +125,13 @@ class TestSiteSettingsPrefsBrowserProxy extends TestBrowserProxy {
     this.prefs_ = prefs;
 
     // Notify all listeners that their data may be out of date.
-    for (var type in settings.ContentSettingsTypes) {
-      cr.webUIListenerCallback(
-          'contentSettingSitePermissionChanged',
-          settings.ContentSettingsTypes[type],
-          '');
+    for (var type in this.prefs_.exceptions) {
+      let exceptionList = this.prefs_.exceptions[type];
+      for (var i = 0; i < exceptionList.length; ++i) {
+        cr.webUIListenerCallback(
+            'contentSettingSitePermissionChanged', type,
+            exceptionList[i].origin, '');
+      }
     }
   }
 
@@ -207,6 +209,19 @@ class TestSiteSettingsPrefsBrowserProxy extends TestBrowserProxy {
 
   /** @override */
   setOriginPermissions(origin, contentTypes, blanketSetting) {
+    for (var type in this.prefs_.exceptions) {
+      let exceptionList = this.prefs_.exceptions[type];
+      for (var i = 0; i < exceptionList.length; ++i) {
+        var effectiveSetting = blanketSetting;
+        if (blanketSetting == settings.ContentSetting.DEFAULT) {
+          effectiveSetting = this.prefs_.defaults[type].setting;
+          exceptionList[i].source = settings.SiteSettingSource.DEFAULT;
+        }
+        exceptionList[i].setting = effectiveSetting;
+      }
+    }
+
+    this.setPrefs(this.prefs_);
     this.methodCalled(
         'setOriginPermissions', [origin, contentTypes, blanketSetting]);
   }
